fix-19395 change delete icon color in dark model

--- a/ui/src/app/applications/components/application-summary/application-summary.scss
+++ b/ui/src/app/applications/components/application-summary/application-summary.scss
@@ -1,6 +1,5 @@
 @import 'node_modules/argo-ui/src/styles/config';
 @import 'node_modules/argo-ui/src/styles/theme';
-
 .application-summary {
     &__labels {
         line-height: 28px;
@@ -10,7 +9,6 @@
         flex-wrap: wrap;
         padding-top: 0.5em;
     }
-
     &__label {
         background-color: $argo-color-gray-5;
         color: white;
@@ -20,17 +18,14 @@
         margin: 0.3em 0;
         margin-right: 2px;
     }
-
     &__sort-icon {
         cursor: pointer;
         position: absolute;
         font-size: 1.3em;
         left: -1em;
-
         &.fa-sort-up {
             top: 10px;
         }
-
         &.fa-sort-down {
             bottom: 10px;
         }
@@ -41,47 +36,43 @@
         top: 1em;
         right: 1em;
     }
-
     &__links-rows {
         margin: 10px 0;
     }
-    
     &__links-row {
         display: flex;
         align-items: center;
         height: 35px;
     }
-
     .argo-field {
         line-height: 1.15;
+        button {
+            @include themify($themes) {
+                color: themed('text-1');
+            }
+        }
     }
-
     .white-box__details p {
         font-weight: 500;
-        @include themify($themes) {            
+        @include themify($themes) {
             color: themed('text-1');
         }
     }
-
     .white-box__details-row .row {
         padding-left: 1em;
         padding-right: 1em;
     }
-
     .white-box__details-row .row .columns:last-child {
         padding-left: 1em;
     }
-
     .select {
         padding-bottom: 0;
     }
-
     .row.application-retry-options {
-        .columns.application-retry-options__item{
+        .columns.application-retry-options__item {
             padding-left: 0;
             padding-right: 10px;
         }
-
         .argo-form-row__error-msg {
             position: static;
             line-height: 1;
